add display buttons and further methods to business logic

--- a/index.html
+++ b/index.html
@@ -13,5 +13,12 @@
       <button type="button" class="btn btn-danger" id="roll">Roll the Dice!</button>
       <button type="button" class="btn btn-success" id="hold">Hold!</button>
     </form>
+    <div>
+      <h2>Die number: <span id="die-number"></span></h2>
+      <h2>Turn Total: <span id="turn-score">0</span></h2>
+      <h2>Current player: <span id="current-player"></span></h2>
+      <h2><span id="player0name"></span>'s Score: <span id="player0-score">0</span></h2>
+      <h2><span id="player1name"></span>'s Score: <span id="player1-score">0</span></h2>
+    </div>
   </body>
 </html>
