--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <script src="js/jquery-3.4.1.js"></script>
-    <script src="js/scripts.js"></script>
-    <meta charset="utf-8">
-    <title>Pig Dice</title>
-  </head>
-  <body>
+<head>
+  <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <script src="js/jquery-3.4.1.js"></script>
+  <script src="js/scripts.js"></script>
+  <meta charset="utf-8">
+  <title>Pig Dice</title>
+</head>
+<body>
+  <form class="names" action="index.html" method="post">
+    <label for="player0">Player 1: </label>
+    <input type="text" name="player0" id="playerOne" value="">
+    <label for="player1">player 2: </label>
+    <input type="text" name="player1" id="playerTwo" value="">
+    <button type="submit" id="nameSubmit" name="button">Submit</button>
+  </form>
+  <div class="container">
     <form class="" action="index.html" method="post">
       <button type="button" class="btn btn-danger" id="roll">Roll the Dice!</button>
       <button type="button" class="btn btn-success" id="hold">Hold!</button>
@@ -20,5 +28,10 @@
       <h2><span id="player0name"></span>'s Score: <span id="player0-score">0</span></h2>
       <h2><span id="player1name"></span>'s Score: <span id="player1-score">0</span></h2>
     </div>
-  </body>
+  </div>
+  <div class="gameOver">
+    <h2> GOOD JOB!!! <span id="winner"></span> WON!!!</h2>
+    <button id="refresh" type="submit"  onClick="refreshPage()">Play Again?</button>
+  </div>
+</body>
 </html>
