--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
       <h2><span id="player1name"></span>'s Score: <span id="player1-score">0</span></h2>
     </div>
   </div>
-  <div class="container">
-  <div class="jumbotron">
-    <div class="pig">
-    <h2> GOOD JOB!!!</h2>
-    <h1><span id="winner"></span> WON!!!</h1>
-    <button id="refresh" type="button"  onClick="refreshPage()">Play Again?</button>
+  <div class="jumbotron" id="pig">
+    <!-- <div class="pig"> -->
+      <h2> GOOD JOB!!!</h2>
+      <h1><span id="winner"></span> WON!!!</h1>
+      <button id="refresh" type="button"  onClick="refreshPage()">Play Again?</button>
+    <!-- </div> -->
   </div>
-  </div>
-</div>
 </body>
 </html>
