--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <title>Pig Dice</title>
 </head>
 <body>
+  <div id="page-header"class="jumbotron">
+    <h1 class="display-4">Play Pig Dice</h1>
+    <hr class="my-4">
+    <p class="lead">Click the Globe to go to the Wikipedia Page for Instructions:</p>
+    <a href="https://en.wikipedia.org/wiki/Pig_(dice_game)" target="blank"><img src="img/wikipedia-logo.jpg" alt="wikipedia globe"></a>
+  </div>
   <form class="names" action="index.html" method="post">
     <label for="player0">Player 1: </label>
     <input type="text" name="player0" id="playerOne" value="">
@@ -18,15 +24,29 @@
   </form>
   <div id="game" class="container">
     <form class="" action="index.html" method="post">
-      <button type="button" class="btn btn-danger" id="roll">Roll the Dice!</button>
-      <button type="button" class="btn btn-success" id="hold">Hold!</button>
+      <button type="button" id="roll">ROLL</button>
+      <button type="button" id="hold">HOLD</button>
     </form>
     <div>
-      <h2>Die number: <span id="die-number"></span></h2>
+      <h2><span id="die-number">--</span></h2>
+      <div class="row">
+        <div class="col-md-6">
+          <h2><span id="player0name">Player 1</span></h2>
+        </div>
+        <div class="col-md-6">
+          <h2><span id="player1name">Player 2</span></h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <h2><span id="player0-score">0</span></h2>
+        </div>
+        <div class="col-md-6">
+          <h2><span id="player1-score">0</span></h2>
+        </div>
+      </div>
       <h2>Turn Total: <span id="turn-score">0</span></h2>
       <h2>Current player: <span id="current-player"></span></h2>
-      <h2><span id="player0name"></span>'s Score: <span id="player0-score">0</span></h2>
-      <h2><span id="player1name"></span>'s Score: <span id="player1-score">0</span></h2>
     </div>
   </div>
   <div class="jumbotron" id="pig">
