--- a/index.html
+++ b/index.html
@@ -28,14 +28,24 @@
       <button type="button" id="roll">ROLL</button>
       <button type="button" id="hold">HOLD</button>
     </form>
+    <br>
     <div class="row">
       <div class="col-md-4">
-      <div id="die-roll">
-        <h2><span id="die-number">--</span></h2>
+        <div id="die-roll">
+          <div id="dice-display">
+            <img id="die1" class="dice" src="img/inverted-dice-1.svg" alt="die 1 image">
+            <img id="die2" class="dice" src="img/inverted-dice-2.svg" alt="die 2 image">
+            <img id="die3" class="dice" src="img/inverted-dice-3.svg" alt="die 3 image">
+            <img id="die4" class="dice" src="img/inverted-dice-4.svg" alt="die 4 image">
+            <img id="die5" class="dice" src="img/inverted-dice-5.svg" alt="die 5 image">
+            <img id="die6" class="dice" src="img/inverted-dice-6.svg" alt="die 6 image">
+          </div>
+        </div>
+        <h3>Turn Total:<br><span id="turn-score">0</span></h3>
       </div>
-      <h3>Turn Total:<br><span id="turn-score">0</span></h3>
-    </div></div>
+    </div>
     <div>
+      <br>
       <div class="row">
         <div id="player0display" class="col-md-6">
           <h2><span id="player0name">Player 1</span></h2><br>
